# wz-gui

./: Cargo.toml
.github/workflows/: gen_centos9_continuous.yml  gen_centos9_tag.yml  gen_debian11_continuous.yml  gen_debian11_tag.yml  gen_debian12_continuous.yml  gen_debian12_tag.yml  gen_fedora39_continuous.yml  gen_fedora39_tag.yml  gen_fedora40_continuous.yml  gen_fedora40_tag.yml  gen_fedora41_continuous.yml  gen_fedora41_tag.yml  gen_macos_continuous.yml  gen_macos_tag.yml  gen_ubuntu20.04_continuous.yml  gen_ubuntu20.04_tag.yml  gen_ubuntu22.04_continuous.yml  gen_ubuntu22.04_tag.yml  gen_ubuntu24.04_continuous.yml  gen_ubuntu24.04_tag.yml  gen_windows_continuous.yml  gen_windows_tag.yml
assets/: wezterm.desktop
config/src/: config.rs  lib.rs  lua.rs
mux/src/: domain.rs
soureigate-core/: Cargo.toml
soureigate-core/src/: api.rs  config.rs  danger.rs  filter.rs  lib.rs
wezterm-client/src/: client.rs
wezterm-gui/: Cargo.toml
wezterm-gui-subcommands/src/: lib.rs
wezterm-gui/src/: main.rs  soureigate_auth.rs
wezterm-gui/src/termwindow/: mod.rs
wezterm-gui/src/termwindow/render/: mod.rs  paint.rs  sidebar.rs
wezterm-mux-server/src/: main.rs
