[package]
name = "soureigate-core"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
dirs = "6"
log = "0.4"

[dependencies.reqwest]
version = "0.12"
features = ["blocking", "json", "rustls-tls"]
default-features = false

[dependencies.open]
version = "5"
optional = true

[features]
default = ["api"]
api = ["dep:open"]
